Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -152,13 +152,29 @@
        "Text(0,0.5,'Target values')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Code here"
+    "# Import libraries\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "plt.style.use('seaborn')\n",
+    "np.random.seed(124)\n",
+    "\n",
+    "#Generate 100 examples of X and y(a simple cubic function of X ). \n",
+    "X = np.linspace(-3, 3, 100)\n",
+    "y = X ** 3 + np.random.randn(100)\n",
+    "\n",
+    "# Plot the data \n",
+    "plt.figure(figsize=(15,6))\n",
+    "plt.scatter(X, y);\n",
+    "plt.title(\"Simple quadratic dataset with noise\")\n",
+    "plt.xlabel(\"Feature values\")\n",
+    "plt.ylabel(\"Target values\")"
    ]
   },
   {
@@ -182,22 +198,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape X_train: (75, 1)\n",
+      "Shape X_train: (75, 1, 1, 1, 1, 1)\n",
       "Shape y_train: (75,)\n",
-      "Shape X_test: (25, 1)\n",
+      "Shape X_test: (25, 1, 1, 1, 1, 1)\n",
       "Shape y_test: (25,)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[[3.]]]]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Code here "
+    "# Split the data into a training and test set\n",
+    "X = X[:, np.newaxis]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "\n",
+    "# Print the data dimensions\n",
+    "print(f'Shape X_train: {X_train.shape}')\n",
+    "print(f'Shape y_train: {y_train.shape}')\n",
+    "print(f'Shape X_test: {X_test.shape}')\n",
+    "print(f'Shape y_test: {y_test.shape}')"
    ]
   },
   {
@@ -217,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -230,13 +264,16 @@
        "           presort=False, random_state=10, splitter='best')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Code here "
+    "# Fitting Decision Tree Regression to the dataset\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "regressor = DecisionTreeRegressor(random_state = 10, max_depth=3)\n",
+    "regressor.fit(X_train, y_train)"
    ]
   },
   {
@@ -259,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +309,13 @@
     }
    ],
    "source": [
-    "# Code here "
+    "from sklearn.metrics import mean_squared_error as mse\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "# Make predictions and evaluate \n",
+    "y_pred = regressor.predict(X_test)\n",
+    "print ('MSE score:', mse(y_test, y_pred))\n",
+    "print('R-sq score:',r2_score(y_test,y_pred))"
    ]
   },
   {
@@ -415,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
